# ark_compiler

./: .gitignore  CMakeLists.txt  CNAME  README.md  a.out  cstring.c  o  oooo  p2c  package-lock.json  package.json  test.cpp  wget-log  xmake.lua
files/: 1.pas  SegmentTree.pas  a.out  analyse_table  analyse_table.txt  grammar.txt  info.json  keywords.txt  lex_err.txt  lex_out.txt  out  out.c  out.cpp  pof  pof.json  prelude.h
files/dependencies/: grammar.txt
files/testcase/: 1.pas  SegmentTree.pas  array2_1.pas  array2_2.pas  backpack.pas  bin_err.pas  bin_oct_dec_hex.pas  char.pas  const.pas  function.pas  gcd.pas  helloworld.pas  lex_err1.pas  lex_err2.pas  max.pas  oct_err.pas  parser_err1.pas  parser_err2.pas  parser_err3.pas  parser_err4.pas  parser_err5.pas  qpow.pas  qsort.pas  record.pas  string.pas  type_err2.pas
src/: ccvm.cpp  ccvm.h  codegen.h  const.h  data.cpp  data.h  dispatcher_vis.cpp  dispatcher_vis.h  err.h  gen.cpp  gen.h  lex.cpp  lex.h  lexer.cpp  lexer.h  logger.cpp  logger.h  logger.hpp  main.cpp  parser.cpp  parser.h  stdsupport.cpp  stdsupport.h  symbols.h  templatelogger.cpp  templatelogger.h  templatelogger.hpp  test_ast.h  wrt.cpp
src/include/: httplib.h  rang.hpp
src/visualizer/: 123  package-lock.json  test_f.pas
svr_program/: apb.pas  info.json  out  out.c  p2c  server  server.cpp  type_err1.c
svr_program/include/: json.hpp
svr_program/testcase/: lucida_test.pas  max.pas  parser_err6.pas  record.pas  string.pas  (+1 more)
visualizer/: demo.html  hljs.css  index.html  out.txt  package-lock.json  package.json  webpack.config.js
(+5 files in other folders)
